[gd_scene load_steps=18 format=2]

[ext_resource path="res://FemaleBody.tscn" type="PackedScene" id=1]
[ext_resource path="res://BottomBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Headline.tscn" type="PackedScene" id=3]
[ext_resource path="res://Score.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/xolonium-regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://assets/habitIcons/store_icon.png" type="Texture" id=7]
[ext_resource path="res://assets/background.jpg" type="Texture" id=8]
[ext_resource path="res://PauseOrgan.tscn" type="PackedScene" id=9]
[ext_resource path="res://HabitsBoughtPanel.tscn" type="PackedScene" id=10]
[ext_resource path="res://HabitsButton.gd" type="Script" id=11]
[ext_resource path="res://MaleBody.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/pause.png" type="Texture" id=15]
[ext_resource path="res://PauseRegular.gd" type="Script" id=16]

[sub_resource type="CircleShape2D" id=3]
radius = 21.0238

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0.0588235, 0.27451, 0.584314, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Main" type="Node"]
pause_mode = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ -11.0, 336.0, 288.0 ],
"_edit_vertical_guides_": [ 880.0, -123.0, 88.0 ]
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 504.222, 302 )
scale = Vector2( 0.162667, 0.162667 )
texture = ExtResource( 8 )

[node name="FemaleBody" parent="." instance=ExtResource( 1 )]
position = Vector2( -124, 1 )
scale = Vector2( 1.5, 1.5 )

[node name="MaleBody" parent="." instance=ExtResource( 14 )]
visible = false

[node name="HabitsBoughtArea2D" type="Area2D" parent="."]
script = ExtResource( 11 )

[node name="HoverArea" type="CollisionShape2D" parent="HabitsBoughtArea2D"]
position = Vector2( 32, 191 )
rotation = -2.27374e-13
shape = SubResource( 3 )

[node name="HabitsBoughtNode" parent="HabitsBoughtArea2D" instance=ExtResource( 10 )]
position = Vector2( 1, -2 )

[node name="BottomBar" parent="." instance=ExtResource( 2 )]
position = Vector2( 43, 58 )

[node name="Headline" parent="." instance=ExtResource( 3 )]
position = Vector2( -30, -56 )
scale = Vector2( 0.6, 0.6 )

[node name="TextTimer" type="Timer" parent="Headline"]
wait_time = 0.1

[node name="HabitsButton" type="Button" parent="."]
anchor_right = 0.12
anchor_bottom = 0.197
margin_left = 881.0
margin_top = 467.0
margin_right = 870.12
margin_bottom = 454.8
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HabitsButtonLabel" type="Label" parent="HabitsButton"]
margin_left = 18.0
margin_top = 112.0
margin_right = 94.0
margin_bottom = 132.0
theme = SubResource( 2 )
text = "H√ÅBITOS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" parent="." instance=ExtResource( 4 )]
position = Vector2( -109, -202 )
scale = Vector2( 1.4, 1.4 )

[node name="PauseButton" type="Button" parent="."]
margin_left = 884.0
margin_top = 348.0
margin_right = 1408.0
margin_bottom = 866.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 15 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseCanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseScreen" parent="PauseCanvasLayer" instance=ExtResource( 9 )]
script = ExtResource( 16 )

[connection signal="habitsBoughtVisible" from="HabitsBoughtArea2D" to="HabitsBoughtArea2D/HabitsBoughtNode" method="_on_HabitsBoughtArea2D_habitsBoughtVisible"]
[connection signal="mouse_entered" from="HabitsBoughtArea2D" to="HabitsBoughtArea2D" method="_on_HabitsBoughtArea2D_mouse_entered"]
[connection signal="mouse_exited" from="HabitsBoughtArea2D" to="HabitsBoughtArea2D" method="_on_HabitsBoughtArea2D_mouse_exited"]
[connection signal="timeout" from="Headline/TextTimer" to="Headline" method="display_news"]
[connection signal="pressed" from="HabitsButton" to="." method="_on_HabitsButton_pressed"]
[connection signal="pressed" from="PauseButton" to="PauseCanvasLayer/PauseScreen" method="_on_PauseButton_pressed"]
